# BandToy

./: .env.example  .gitignore  README.md
docs/: architecture.md  current-status.md  poc-plan.md  product-brief.md
docs/superpowers/plans/: 2026-06-22-musical-personality-p01.md
firmware/: CMakeLists.txt  partitions_16mb.csv  sdkconfig.defaults
firmware/assets/horn-bear/: listening.rgb565  playing.rgb565  waiting.rgb565
firmware/main/: CMakeLists.txt  bandtoy_config.h.example  box3_audio_output.cpp  box3_audio_output.h  character_profile.h  device_sync.cpp  device_sync.h  display_signals.cpp  display_signals.h  idf_component.yml  life_signals.cpp  life_signals.h  main.cpp  pins.h  recognition_client.cpp  recognition_client.h  song_runtime.cpp  song_runtime.h
phrase_runtime/: README.md  call_response_demo.cpp  phrase_runtime.cpp  phrase_runtime.h
server/: README.md  chat_ai.py  emotion_ai.py  music_personality.py  pipeline_service.py  server.py  test_chat_ai.py  test_emotion_ai.py  test_library_ui.py  test_music_personality.py  test_personality_server.py  test_song_chain.py
tools/: build_role.sh
tools/bandtoy_test/: play_twinkle_phrase.py  run_call_response_test.py
